--- a/package.json
+++ b/package.json
@@ -20,8 +20,24 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.4.0",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-http": "^1.5.9",
+    "apollo-link-ws": "^1.0.12",
+    "auth0-js": "^9.8.2",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "font-awesome": "^4.7.0",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "moment": "^2.23.0",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
+    "subscriptions-transport-ws": "^0.9.15",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
